<resources>
    <string name="app_name" translatable="false">UpTodd</string>
    <string name="loadingDuarationInMillis" translatable="false">10000</string>
    <string name="uptoddWebsiteUrl" translatable="false">https://www.uptodd.com/</string>
    <string name="menu_home">Home</string>
    <string name="do_s">Do\'s</string>
    <string name="dont_s">Dont\'s</string>
    <string name="ideal_weight">Weight:</string>
    <string name="your_weekly_score_board">Your Weekly Score Board</string>
    <string name="your_essential_score_board">Your Essential Score Board</string>
    <string name="your_monthly_score_board">Your Monthly Score Board</string>
    <string name="your_daily_score_board">Your Daily Score Board</string>
    <string name="up_program_desc">Premium program to provide personalised support from team from MIT(USA), IITs, AIIMS, Stanford etc. and to empower you with the best prenatal parenting toolkit under expert guidance, where uptodd team as a Family ensures right prenatal parenting for your unborn baby with 24*7 support and complete take care</string>
    <string name="up_program_title">Premium Program</string>
    <string name="up_program_tagline">EMPOWER YOUR BABY WITH THE BEST</string>
    <string name="up_program_plane_extra">(Complimentary app access of 3 extra months)</string>
    <string name="success_payment_message">Congratulations!!
You have successfully joined premium Program</string>
    <string name="success_payment_tagline">We have shared the details over mail to you, our team will
reach you out within 24-48 hours to start your onboarding</string>
    <string name="mark_activities">Mark Routines</string>
    <string name="today_s_tip">Today\'s Tip</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="share">Share</string>
    <string name="mark_all_done">Mark all done</string>
    <string name="you_will_be_a_super_parent_soon">You will be a <b>Super Parent</b> soon</string>
    <string name="toys">Toys</string>
    <string name="colours">Colours</string>
    <string name="back">Back</string>
    <string name="all_activities_completed">All Activities Completed</string>
    <string name="you_re_a_super_parent"><b>You\'re a SUPER \nPARENT</b> </string>
    <string name="reminder_frequency">Reminder Frequency</string>
    <string name="remind_me_at">Remind me at</string>
    <string name="save">Save</string>
    <string name="m">M</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="f">F</string>
    <string name="s">S</string>
    <string name="cancel">Cancel</string>
    <string name="watch_now">Read Now</string>
    <string name="app_guidelines">App Guidelines</string>
    <string name="support">Support</string>
    <string name="sample">256</string>
    <string name="dashboard">Dashboard</string>
    <string name="stories">Stories</string>
    <string name="yoga">Yoga</string>
    <string name="you_re_a_n_super_parent">You\'re a\n Super Parent</string>
    <string name="subscriptionEnded">Thank you for taking the 10 days program for baby \' s growth and development</string>
    <string name="setupLoading">We are getting things ready for you</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_log_in_with">Or Log In With</string>
    <string name="logout">Logout</string>
    <string name="phone_no">Phone No.</string>
    <string name="name">Name</string>
    <string name="name_req">Name*</string>
    <string name="whatsapp_no">Whatsapp No</string>
    <string name="whatsapp_no_req">Whatsapp No*</string>
    <string name="city">City</string>
    <string name="submit">Submit</string>
    <string name="baby_dob">Baby DOB</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="account">Account</string>
    <string name="personal_info">Personal Info</string>
    <string name="e_mail_id">E-mail ID</string>
    <string name="wallet_details">Wallet Details</string>
    <string name="total_amount">Total amount</string>
    <string name="amount_in_bank">Amount in bank</string>
    <string name="pending_amount">Pending amount</string>
    <string name="bank_account_details">Bank Account Details</string>
    <string name="facebook_app_id" translatable="false">833338570768649</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb833338570768649</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="reopen_ticket">Reopen Ticket</string>
    <string name="welcome_doctor"><u>Welcome, Doctor</u></string>
    <string name="patients_enrolled_count">Patients Enrolled Count</string>
    <string name="patients_referred_count">Patients Referred Count</string>
    <string name="ticket_number">Ticket number</string>
    <string name="starting_date">Starting date</string>
    <string name="ticket_status">Ticket status</string>
    <string name="rate_ticket">Rate ticket</string>
    <string name="log_in">Login</string>
    <string name="sign_in_as_doctor">Login as doctor</string>
    <string name="generate_new_ticket">Generate new ticket</string>
    <string name="book_a_session">Book A Session</string>
    <string name="recommended_webinars">Recommended blogs</string>
    <string name="comment">Comment</string>
    <string name="rate_this_ticket">Rate this ticket</string>
    <string name="baby_name">Baby Name</string>
    <string name="baby_age_req">Baby Age*</string>
    <string name="session_by">Session By</string>
    <string name="session_date">Session Date</string>
    <string name="session_id">Session ID</string>
    <string name="rate_session">Rate Session</string>
    <string name="music">Music</string>
    <string name="book_a_slot">Book a slot</string>
    <string name="poem">Poem</string>
    <string name="bank_name">Bank Name:</string>
    <string name="refer_and_earn_5_revenue_for_the_entire_lifecycle">Refer and Earn 5% revenue for the entire lifecycle.</string>
    <string name="see_previous_referrals">See previous referrals</string>
    <string name="refer_amp_earn"><![CDATA[Refer & Earn]]></string>
    <string name="done">Done</string>
    <string name="close">Close</string>
    <string name="refer_a_doctor">Refer a doctor</string>
    <string name="date_of_registration">Date of registration</string>
    <string name="date_of_referral">Date of referral</string>
    <string name="status">Status</string>
    <string name="note">Note</string>
    <string name="timing">Timing</string>
    <string name="change_password">Change Password</string>
    <string name="successful">Successful</string>
    <string name="pending">Pending</string>
    <string name="failed">Failed</string>
    <string name="referral_date">Referral Date</string>
    <string name="referral_date_range">Referral Date Range</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="my_patients">My patients</string>
    <string name="my_doctors">My Doctors</string>
    <string name="refer">Refer</string>
    <string name="capture_moment">Capture Moment</string>
    <string name="expected_outcomes">Milestone tracker</string>
    <string name="blogs">Tips &amp; Guidelines</string>
    <string name="webinars">Webinars</string>
    <string name="not_now">Not Now</string>
    <string name="a_c_holder">A/C Holder:</string>
    <string name="a_c_no">A/C No:</string>
    <string name="amount_by_referring_doctors">Amount by referring doctors</string>
    <string name="amount_by_referring_patients">Amount by referring patients</string>
    <string name="topic">Topic</string>
    <string name="diet">Diet</string>
    <string name="vaccination">Vaccination</string>
    <string name="we_miss_you_doctor">We Miss You Doctor</string>
    <string name="refer_now">Refer NOW</string>
    <string name="_10_gift_voucher">10% GIFT VOUCHER</string>
    <string name="close_ticket">Close Ticket</string>
    <string name="doctor_app_guide">Doctor App Guide</string>
    <string name="doctor_referral_guide">Doctor Referral Guide</string>
    <string name="doctor_brochure">Doctor Brochure</string>
    <string name="resources">Resources</string>
    <string name="tutorial" translatable="false">App tutorials</string>
    <string name="kit_tutorial" translatable="false">Kit Tutorial</string>
    <string name="all_activities">All Routines</string>
    <string name="essentialsAlarmDescription">Essentials Alarms are scheduled for first and second Monday, and the last Saturday and Sunday of the month</string>
    <string name="monthlyAlarmDescription">Monthly Alarms are scheduled for first and second Monday, and the last Saturday and Sunday of the month</string>
    <string name="activity_alarms">Routine Alarms</string>
    <string name="loading">Loading..</string>
    <string name="no_tickets_found">No Tickets Found!</string>
    <string name="no_sessions_found">No Sessions Found!</string>
    <string name="no_referrals_here">No referrals here.</string>
    <string name="no_poems_found">No poems found!</string>
    <string name="no_music_found">No music found!</string>
    <string name="welcome_name">Welcome, Name</string>
    <string name="your_profile">Your Profile</string>
    <string name="edit_profile_image">Edit Profile Image</string>
    <string name="ranking">Ranking</string>
    <string name="personal_information">Personal Information</string>
    <string name="phone">Phone</string>
    <string name="permanent_address">Permanent address</string>
    <string name="financial_mail">Financial Mail</string>
    <string name="kids_information">Kids Information</string>
    <string name="kids_name">Kids name</string>
    <string name="kids_age">Kids age</string>
    <string name="kids_gender">Kids Gender</string>
    <string name="subscription_details">Product Details</string>
    <string name="current_subscribed_plan">Product Type</string>
    <string name="set_up_nanny_mode">Set up nanny mode</string>
    <string name="see_update_nanny_details">See/Update nanny mode details</string>
    <string name="nanny_details_are_updated">The nanny mode details are updated</string>
    <string name="account_details_are_updated">The account details are updated</string>
    <string name="are_you_sure_logout">Are you sure you want to logout</string>
    <string name="select_picture">Select Picture</string>
    <string name="unable_to_select_image">Unable to select image</string>
    <string name="enter_userid">Enter user id</string>
    <string name="short_password">Password length must be more than 8</string>
    <string name="image_not_saved">Image Not saved</string>
    <string name="enter_valid_name">Enter valid name</string>
    <string name="enter_valid_phone">Enter valid phone number</string>
    <string name="enter_valid_address">Enter valid address</string>
    <string name="enter_valid_financial">Enter valid financial email</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="failed_to_load_to_database">Failed to load to database</string>
    <string name="retry">RETRY</string>
    <string name="loading_please_wait">Loading, please wait</string>
    <string name="ok">OK</string>
    <string name="change_language">Change Language</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="general">Miscellaneous Tools</string>
    <string name="user_section">User section</string>
    <string name="my_referrals">My referrals</string>
    <string name="activity_podcast"> Activity Podcast</string>
    <string name="language_text">Language</string>
    <string name="activity_sample">Session</string>
    <string name="memory_booster">Memory Booster</string>
</resources>