<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/doctorDashboardFragment"
        android:enabled="true"
        android:icon="@drawable/home_bottom_doctor"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/referredListPatient"
        android:enabled="true"
        android:icon="@drawable/bottom_patient_refer"
        android:title="@string/my_patients"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/referredListDoctor"
        android:enabled="true"
        android:icon="@drawable/doctor_referral"
        android:title="@string/my_doctors"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/doctorAccount"
        android:enabled="true"
        android:icon="@drawable/account_bottom_doctor"
        android:title="@string/account"
        app:showAsAction="ifRoom" />
</menu>