<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        android:background="@drawable/round_dialog_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat"
            android:text="@string/change_language"
            android:textColor="@color/textGrey"
            android:textSize="14sp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radioButton_english"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/english"
                    android:fontFamily="@font/montserrat"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"/>
                <RadioButton
                    android:id="@+id/radioButton_hindi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hindi"
                    android:fontFamily="@font/montserrat"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"/>

            </RadioGroup>
        </ScrollView>

        <Button
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:text="@string/ok"
            android:background="@drawable/round_button_login"
            android:textColor="#fff"
            android:fontFamily="@font/montserrat"
            android:textSize="14sp"/>

    </LinearLayout>
</layout>